--- a/Starter_Code/NoSQL_setup_starter.ipynb
+++ b/Starter_Code/NoSQL_setup_starter.ipynb
@@ -133,7 +133,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('677c5de5430668d69a9deb56'),\n",
+      " '_id': ObjectId('677f0164ac3e3bba02ef2e1a'),\n",
       " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
       "            'rel': 'self'}],\n",
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('677c5e7694b641c28bad3509'), acknowledged=True)"
+       "InsertOneResult(ObjectId('677f01bd98908f5e8aa52335'), acknowledged=True)"
       ]
      },
      "execution_count": 9,
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('677c5e7694b641c28bad3509'),\n",
+       "{'_id': ObjectId('677f01bd98908f5e8aa52335'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': '',\n",
@@ -302,14 +302,15 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('677c5de5430668d69a9deb56')}\n"
+      " '_id': ObjectId('677f0164ac3e3bba02ef2e1a')}\n"
      ]
     }
    ],
    "source": [
     "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
-    "business_type = establishments.find_one({\"BusinessType\": \"Restaurant/Cafe/Canteen\"}, {\"BusinessTypeID\": 1, \"BusinessType\": 1})\n",
-    "pprint(business_type)"
+    "business_type = {\"BusinessType\": \"Restaurant/Cafe/Canteen\"} \n",
+    "business_fields = {\"BusinessTypeID\": 1, \"BusinessType\": 1}\n",
+    "pprint(establishments.find_one(business_type,projection=business_fields))"
    ]
   },
   {
@@ -341,7 +342,7 @@
     "# Update the new restaurant with the correct BusinessTypeID\n",
     "establishments.update_one(\n",
     "    {\"BusinessName\": \"Penang Flavours\"},\n",
-    "    {\"$set\": {\"BusinessTypeID\": business_type['BusinessTypeID']}}\n",
+    "    {\"$set\": {\"BusinessTypeID\": 1}}\n",
     ")"
    ]
   },
@@ -372,7 +373,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('677c5e7694b641c28bad3509'),\n",
+      " '_id': ObjectId('677f01bd98908f5e8aa52335'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -407,7 +408,7 @@
    ],
    "source": [
     "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
-    "dover_count = establishments.count_documents({\"LocalAuthorityName\": \"Dover\"})\n",
+    "dover_count = establishments.count_documents({'LocalAuthorityName': \"Dover\"})\n",
     "print(dover_count)"
    ]
   },
@@ -486,7 +487,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('677c5de5430668d69a9dee3d'),\n",
+      " '_id': ObjectId('677f0164ac3e3bba02ef3101'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
@@ -651,7 +652,7 @@
       " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('677c5de5430668d69a9dee3d'),\n",
+      " '_id': ObjectId('677f0164ac3e3bba02ef3101'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
