--- a/Starter_Code/NoSQL_setup_starter.ipynb
+++ b/Starter_Code/NoSQL_setup_starter.ipynb
@@ -25,7 +25,8 @@
     "\n",
     "Within this markdown cell, copy the line of text you used to import the data from your Terminal. This way, future analysts will be able to repeat your process.\n",
     "\n",
-    "e.g.: Import the dataset with `mongoimport --db uk_food --collection establishments --file establishments.json --jsonArray`"
+    "e.g.: Import the dataset with `mongoimport --db uk_food --collection establishments --file C:\\Users\\fitse\\OneDrive\\Desktop\\Challenges\\nosql-challenge\\Starter_Code\\Resources\\establishments.json --jsonArray\r\n",
+    "`"
    ]
   },
   {
@@ -133,7 +134,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('677f0164ac3e3bba02ef2e1a'),\n",
+      " '_id': ObjectId('678178e20819f85797052577'),\n",
       " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
       "            'rel': 'self'}],\n",
@@ -228,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('677f01bd98908f5e8aa52335'), acknowledged=True)"
+       "InsertOneResult(ObjectId('67817961919e3d6e696b7167'), acknowledged=True)"
       ]
      },
      "execution_count": 9,
@@ -250,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('677f01bd98908f5e8aa52335'),\n",
+       "{'_id': ObjectId('67817961919e3d6e696b7167'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': '',\n",
@@ -302,7 +303,7 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('677f0164ac3e3bba02ef2e1a')}\n"
+      " '_id': ObjectId('678178e20819f85797052577')}\n"
      ]
     }
    ],
@@ -373,7 +374,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('677f01bd98908f5e8aa52335'),\n",
+      " '_id': ObjectId('67817961919e3d6e696b7167'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -487,7 +488,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('677f0164ac3e3bba02ef3101'),\n",
+      " '_id': ObjectId('678178e20819f85797052858'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
@@ -652,7 +653,7 @@
       " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('677f0164ac3e3bba02ef3101'),\n",
+      " '_id': ObjectId('678178e20819f85797052858'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
