--- a/Starter_Code/NoSQL_setup_starter.ipynb
+++ b/Starter_Code/NoSQL_setup_starter.ipynb
@@ -111,32 +111,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'The Bay',\n",
-      " 'AddressLine2': 'St Margarets Bay',\n",
-      " 'AddressLine3': 'Kent',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Refreshment Kiosk',\n",
+      "{'AddressLine1': 'West Cottage',\n",
+      " 'AddressLine2': 'South Foreland Lighthouse',\n",
+      " 'AddressLine3': 'The Front',\n",
+      " 'AddressLine4': 'St Margarets Bay',\n",
+      " 'BusinessName': 'Mrs Knotts Tea Room',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.347174863443,\n",
-      " 'FHRSID': 254719,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000069980',\n",
+      " 'Distance': 4587.492467848017,\n",
+      " 'FHRSID': 429991,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000055200',\n",
       " 'LocalAuthorityCode': '182',\n",
       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
       " 'LocalAuthorityName': 'Dover',\n",
       " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DY',\n",
-      " 'RatingDate': '2022-03-24T00:00:00',\n",
+      " 'PostCode': 'CT15 6HP',\n",
+      " 'RatingDate': '2019-05-02T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('678178e20819f85797052577'),\n",
-      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
+      " '_id': ObjectId('6781967866dfce4d6edabb2d'),\n",
+      " 'geocode': {'latitude': '51.14061', 'longitude': '1.371894'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/429991',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -146,7 +146,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
@@ -229,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('67817961919e3d6e696b7167'), acknowledged=True)"
+       "InsertOneResult(ObjectId('678196af0fb0f043bb6490ac'), acknowledged=True)"
       ]
      },
      "execution_count": 9,
@@ -251,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('67817961919e3d6e696b7167'),\n",
+       "{'_id': ObjectId('678196af0fb0f043bb6490ac'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': '',\n",
@@ -303,7 +303,7 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('678178e20819f85797052577')}\n"
+      " '_id': ObjectId('6781967866dfce4d6edabb2d')}\n"
      ]
     }
    ],
@@ -374,7 +374,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('67817961919e3d6e696b7167'),\n",
+      " '_id': ObjectId('678196af0fb0f043bb6490ac'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -488,7 +488,7 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('678178e20819f85797052858'),\n",
+      " '_id': ObjectId('6781967866dfce4d6edabe0f'),\n",
       " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
@@ -548,8 +548,8 @@
     "# Change the data type from String to Decimal for longitude and latitude\n",
     "establishments.update_many({}, [\n",
     "    {\"$set\": {\n",
-    "        \"Location.Longitude\": {\"$toDouble\": \"$Location.Longitude\"},\n",
-    "        \"Location.Latitude\": {\"$toDouble\": \"$Location.Latitude\"}\n",
+    "        \"geocode.longitude\": {\"$toDouble\": \"$geocode.longitude\"},\n",
+    "        \"geocode.latitude\": {\"$toDouble\": \"$geocode.latitude\"}\n",
     "    }}\n",
     "])"
    ]
@@ -644,7 +644,6 @@
       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
-      " 'Location': {'Latitude': None, 'Longitude': None},\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
       " 'PostCode': 'CT19 6BL',\n",
@@ -653,8 +652,8 @@
       " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('678178e20819f85797052858'),\n",
-      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " '_id': ObjectId('6781967866dfce4d6edabe0f'),\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
